--- a/employee-training-demo-service/build.gradle
+++ b/employee-training-demo-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-aop")
+    runtime "com.h2database:h2"
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile("org.projectlombok:lombok:1.16.6")
     compile("org.springframework:spring-jdbc:4.3.3.RELEASE")
