checkin to fix bdd issue

--- a/employee-training-demo-acceptance-test/build.gradle
+++ b/employee-training-demo-acceptance-test/build.gradle
@@ -1,67 +1,25 @@
-//evaluationDependsOn(":employee-training-demo-service")
-//
-//apply plugin: 'java'
-//sourceCompatibility = 1.8
-//
-//dependencies {
-//    testCompile project(':employee-training-demo-service')
-//    testCompile("com.jayway.restassured:rest-assured:2.4.1") {
-//        exclude group: 'org.codehaus.groovy', module: 'groovy-all'
-//    }
-//    testCompile("info.cukes:cucumber-java")
-//    testCompile("info.cukes:cucumber-junit")
-//    testCompile("info.cukes:cucumber-spring")
-//    testCompile("junit:junit")
-//}
-//
-//configurations {
-//    cucumberRuntime {
-//        extendsFrom testRuntime
-//    }
-//}
-//
-//task featureComponents(type: JavaExec, dependsOn: [assemble, compileTestJava]) {
-//    dependsOn testClasses
-//
-//    dependsOn ':runMountebankForever'
-//    finalizedBy ':stopMountebankForever'
-//
-//    main = "cucumber.api.cli.Main"
-//
-//    classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-//
-//    jvmArgs = ["-Xms512m", "-Xmx512m"]
-//
-//    args = ['--plugin', 'pretty',
-//            '--plugin', 'html:build/reports/cucumber/component',
-//            '--glue', 'com.gap.product.brand.foundation.test.component.stepdefs', 'src/test/cucumber/component',
-//            '--glue', 'com.gap.product.brand.foundation.test.common.stepdefs',
-//            '--tags', '~@pending'
-//    ]
-//}
-//
-//
-//
-//
-//
-//
-//
-//
-//
-//
-//
-//
+evaluationDependsOn(":employee-training-demo-service")
 group 'com.infy.employee'
 version '0.0.1-SNAPSHOT'
 
+sourceCompatibility = 1.8
+
 apply plugin: 'java'
 
-
-
-repositories {
-    mavenCentral()
+dependencies {
+    testCompile("com.jayway.restassured:rest-assured:2.4.1") {
+        exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+    }
+    testCompile project(':employee-training-demo-service').sourceSets.main.output
+    testCompile("info.cukes:cucumber-java:1.2.5")
+    testCompile("info.cukes:cucumber-junit:1.2.5")
+    testCompile("info.cukes:cucumber-spring:1.2.5")
+    testCompile("junit:junit:4.12")
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+configurations {
+    cucumberRuntime {
+        extendsFrom testRuntime
+    }
 }
