--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,34 @@
 group 'com.infy.employee'
-version '0.0.1-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
+apply plugin: 'base'
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'eclipse'
+
+    repositories {
+        maven {
+            url 'http://artifactory.gapinc.dev/artifactory/maven-repos'
+        }
+        ivy {
+            layout 'maven'
+            url 'http://artifactory.gapinc.dev/artifactory/maven-repos'
+        }
+    }
+
+    eclipse {
+        classpath {
+            containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+            containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7'
+        }
+    }
 }
