--- a/employee-training-demo-service/build.gradle
+++ b/employee-training-demo-service/build.gradle
@@ -1,27 +1,23 @@
+group = 'com.infy.employee'
+
 buildscript {
     ext {
         springBootVersion = '1.5.9.RELEASE'
     }
+
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
     }
 }
-
-jar {
-    baseName = 'gs-actuator-service'
-    version =  '0.1.0'
-}
-
 
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 
-group = 'com.infy.employee'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -37,13 +33,15 @@ bootRun {
     jvmArgs = ["-Xms512m", "-Xmx512m"]
 }
 
+jar {
+    baseName = 'infyRegistrationApplication'
+}
+
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-aop")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    runtime "com.h2database:h2"
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile("org.projectlombok:lombok:1.16.6")
     compile("org.springframework:spring-jdbc:4.3.3.RELEASE")
