--- a/employee-training-demo-service/build.gradle
+++ b/employee-training-demo-service/build.gradle
@@ -43,10 +43,15 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-aop")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    // https://mvnrepository.com/artifact/org.jmockit/jmockit
+    testCompile group: 'org.jmockit', name: 'jmockit', version: '1.8'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
     compile("org.projectlombok:lombok:1.16.6")
     compile("org.springframework:spring-jdbc:4.3.3.RELEASE")
-    compile("org.mariadb.jdbc:mariadb-java-client:1.5.7")
+    //compile("org.mariadb.jdbc:mariadb-java-client:1.5.7")
     compile("com.mchange:c3p0:0.9.5.2")
     compile("io.springfox:springfox-swagger2:2.6.1")
     compile("io.springfox:springfox-swagger-ui:2.6.1")
+    compile group: 'com.h2database', name: 'h2', version: '1.3.148'
 }
